# usd-unreal-pipeline

./: .env.example  AGENTS.md  ARCHITECTURE.md  README.md  RULES.md  main.py  pyproject.toml
.cursor/: spdd-learning.md
pipeline/cli/: __init__.py  app.py  editor.py  env_util.py  validate.py
pipeline/config/: __init__.py  defaults.py  environment.py  loader.py  models.py
pipeline/core/: __init__.py  context.py  filesystem.py  metadata.py  models.py  runner.py
pipeline/logging/: __init__.py  models.py  renderer.py  terminal_styles.py
pipeline/report/: __init__.py  formatter.py  styles.py
pipeline/rules/: __init__.py  models.py  path_ignore.py  registry.py  validation_rule.py
pipeline/unreal/: __init__.py  constants.py  context.py  entry.py  env.py  output.py  runtime.py
pipeline/validation/: __init__.py  discovery.py  models.py  runner.py
scripts/: unreal_run_validation.py  unreal_validate.py  unreal_validate_config.json
scripts/startup/: bootstrap.py  init_unreal.py  paths.py  register_menus.py
spdd/analysis/: GGQPA-XXX-202606300920-[Analysis]-cli-directory-listing.md  GGQPA-XXX-202606301015-[Analysis]-modular-file-validation.md  GGQPA-XXX-202606301015-[Analysis]-package-organization-comments.md  GGQPA-XXX-202606301200-[Analysis]-structured-logging-styling.md  GGQPA-XXX-202607102110-[Analysis]-rule-categories-framework-hardening.md  GGQPA-XXX-202607102135-[Analysis]-framework-stretch-enhancements.md  GGQPA-XXX-202607172140-[Analysis]-validation-context-unreal-host.md  GGQPA-XXX-202607172325-[Analysis]-geometry-mesh-closed-rule.md  (+3 more)
(+33 files in other folders)
